devsecops/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: healthcare
  labels:
    name: healthcare
    data-classification: sensitive
