devsecops/k8s/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthapp-secure-svc
  namespace: healthcare
spec:
  type: NodePort
  selector:
    app: healthapp-secure
  ports:
  - port: 80
    targetPort: 5000
    nodePort: 30082
